# noitahiekka

./: Cargo.toml  flake.nix
src/: compute.wgsl  lib.rs  main.rs  shader.wgsl
