[package]
name = "noitahiekka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics"] }
env_logger = "0.11.2"
flume = "0.11.0"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.13"
